# rde

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TRINO-DATAGRIP-SETUP.md  TRINO-SETUP-SUMMARY.md  docker-compose-complete.yml  docker-compose-trino-simple.yml  docker-compose-trino.yml  docker-compose.yml  quick-start.sh  requirements.txt  test-single-pipeline.sh  todo.md
bins/kafka-producer/: Cargo.toml  README.md
bins/kafka-producer/src/: main.rs
bins/market-data/: Cargo.toml  README.md
bins/market-data/src/: main.rs
bins/rde-cli/: Cargo.toml
bins/rde-cli/src/: main.rs
config/grafana/provisioning/dashboards/: dashboard.yml
config/prometheus/: prometheus.yml
config/trino/: config.properties  jvm.config  node.properties
crates/rde-core/: Cargo.toml
crates/rde-core/src/: lib.rs
crates/rde-io/: Cargo.toml
crates/rde-io/src/: lib.rs  sink_iceberg.rs  sink_parquet.rs  sink_stdout.rs  source_csv.rs  source_kafka.rs  topic_mapping.rs
crates/rde-tx/: Cargo.toml
crates/rde-tx/src/: lib.rs
data/: sales_001.csv
data/json-samples/: README.md
data/sources/bitcoin/: README.md
data/sources/news/: README.md
docker/: docker-compose-complete.yml  docker-compose-trino-final.yml  docker-compose-trino-simple.yml  docker-compose-trino.yml  docker-compose.yml
docs/: API_REFERENCE.md  api-integration.md  architecture.md  blockchain-sink-implementation.md  collectors.md  configuration.md  getting-started.md  quickstart-collectors.md
examples/: flights-pipeline.yml  flights-simple.yml  json-flattening-example.yml  kafka-iceberg-configured.yml  kafka-iceberg-direct.yml  kafka-iceberg-dynamic.yml  kafka-iceberg-product-analytics.yml  kafka-iceberg-simple.yml  kafka-iceberg-topic-mapping.yml  kafka-iceberg-with-transforms.yml  kafka-iceberg.yml  kafka.yml  mini.yml  retail-pipeline.yml  spotify-pipeline.yml  sql-transformation-example.yml  supreme-pipeline.yml  test-pipeline-with-producer.md
nbs/: inspect-parquet-output.ipynb
scripts/: consume-market-data.sh  health-check-trino.sh  monitor-pipeline-health.sh  query-data.py  run-sql.sh  setup-and-run-pipelines.sh  setup-trino.sh  setup.sh  start-market-data.sh  start-minio.sh  stream-individual-datasets.sh  stream-test-data.sh  supreme-pipeline.sh  test-end-to-end.sh  test-iceberg-sink.sh  trino-cli.sh
sql/queries/: flights_analysis.sql  retail_analysis.sql  spotify_analysis.sql
sql/setup/: register_tables.sql
sql/templates/: README.md  analytics_master.sql  example_analytics.sql  flights_duckdb_queries.sql  retail_duckdb_queries.sql  spotify_duckdb_queries.sql
test_bitcoin_api/: Cargo.toml
test_bitcoin_api/src/: main.rs
test_cryptopanic_api/: Cargo.toml  README.md
test_cryptopanic_api/src/: main.rs
trino/catalog/: iceberg_filesystem.properties  iceberg_glue.properties
trino/etc/: config.properties  jvm.config  log.properties  node.properties
