# RDE - Rust Data Engineering
# 
# High-performance real-time data engineering pipeline framework
# Built with Apache Arrow, DataFusion, and Apache Iceberg
#
# Version: 2.0.0
# License: MIT
# Repository: https://github.com/lyteabovenyte/rde

[workspace]
members = [
    "crates/rde-core",      # Core traits, types, and abstractions
    "crates/rde-io",        # Source and sink implementations
    "crates/rde-tx",        # Transform operator implementations
    "bins/rde-cli",         # Main pipeline runner CLI
    "bins/kafka-producer",  # Data streaming utility
    "bins/market-data",     # Bitcoin market data collector
    "test_bitcoin_api",     # Bitcoin API test utility
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Lyte Abovenyte <lyteabovenyte@gmail.com>"]
license = "MIT"
repository = "https://github.com/lyteabovenyte/rde"
homepage = "https://github.com/lyteabovenyte/rde"
description = "High-performance real-time data engineering pipeline framework"
keywords = ["data-engineering", "streaming", "arrow", "iceberg", "kafka"]
categories = ["database", "data-structures", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
# Core dependencies shared across workspace
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Apache Arrow ecosystem
datafusion = "49.0"
# Remove direct arrow dependency - use re-exported from datafusion
parquet = "49.0"

# Data lake and storage
iceberg = "0.2"
object_store = { version = "0.8", features = ["aws"] }

# Kafka integration
rdkafka = { version = "0.36", features = ["tokio"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }



# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration management
config = "0.13"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Web framework for metrics server
axum = "0.7"

# Internal workspace dependencies
rde-core = { path = "crates/rde-core" }
rde-io = { path = "crates/rde-io" }
