[package]
name = "market-data"
version = "0.1.0"
edition = "2021"
authors = ["Lyte Abovenyte <lyteabovenyte@gmail.com>"]
description = "Bitcoin market data collector that fetches data from blockchain.info API and sends to Kafka"

[dependencies]
# Core dependencies
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Kafka integration
rdkafka = { version = "0.36", features = ["tokio"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI and configuration
clap = { version = "4.4", features = ["derive"] }

# Configuration management
config = "0.13"
