[package]
name = "rde-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
arcstr = "1"
tracing = "0.1"
# tiny Arc<str> utility (optional)
# Concurrency & runtime glue
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync",
"signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
# Graph + config
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
# Arrow core types
arrow-array = "53.0"
arrow-schema = "53.0"
arrow-buffer = "53.0"
arrow-select = "53.0"