[package]
name = "rde-core"
version = "2.0.0"
edition = "2021"
authors = ["RDE Team <team@rde-project.org>"]
license = "MIT"
repository = "https://github.com/lyteabovenyte/rde"
description = "Core traits, types, and abstractions for RDE data engineering pipelines"
keywords = ["data-engineering", "streaming", "arrow", "iceberg", "kafka"]
categories = ["database", "data-structures"]

[dependencies]
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
arcstr = "1"
tracing = "0.1"
# tiny Arc<str> utility (optional)
# Concurrency & runtime glue
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync",
"signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
# Graph + config
petgraph = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
# DataFusion for Arrow re-exports
datafusion = "49.0"