[package]
name = "rde-io"
version = "0.1.0"
edition = "2024"

[dependencies]
rde-core = { path = "../rde-core" }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
glob = "0.3"
# Arrow I/O
arrow-array = "*"
arrow-schema = "*"
arrow-buffer = "*"
arrow-csv = "*"
parquet = "*"
# Object storage abstraction (local for now, S3/GCS later)
object_store = { version = "0.9", default-features = false, features = ["aws","gcp","azure","http"] }
tokio-util = "0.7.16"
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
serde_json = "1"
tokio-stream = "0.1.17"
