[package]
name = "rde-io"
version = "0.1.0"
edition = "2024"

[dependencies]
rde-core = { path = "../rde-core" }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
glob = "0.3"
# Arrow I/O
arrow-array = "55.0"
arrow-schema = "55.0"
arrow-buffer = "55.0"
arrow-csv = "55.0"
parquet = "55.0"
# Object storage abstraction (local for now, S3/GCS later)
object_store = { version = "0.9", default-features = false, features = ["aws","gcp","azure","http"] }
# UUID for file naming
uuid = { version = "1.0", features = ["v4"] }
tokio-util = "0.7.16"
rdkafka = { version = "0.36", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
serde_json = "1"
tokio-stream = "0.1.17"
