[package]
name = "rde-tx"
version = "0.1.0"
edition = "2024"

[dependencies]
rde-core = { path = "../rde-core" }
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
# DataFusion for SQL transformations and Arrow re-exports
datafusion = "49.0"
tokio-util = "0.7.16"
# JSON handling for flattening nested structures
serde_json = "1"
# UUID for partition naming
uuid = { version = "1.0", features = ["v4"] }
# Chrono for timestamp handling
chrono = { version = "0.4", features = ["serde"] }
# Regex for string transformations
regex = "1"
